// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryItem should match snapshot for all variants 1`] = `
<div>
  <div
    class="container"
    data-testid="gallery-item-1"
  >
    <div
      class=""
    >
      <img
        alt="beautiful sunset"
        class="image small"
        data-testid="galleryItemImage"
        loading="lazy"
        src="https://example.com/sunset.jpg"
      />
    </div>
    <div
      class="SkeletonItem small"
      data-testid="skeleton"
    />
  </div>
</div>
`;

exports[`GalleryItem should match snapshot for all variants 2`] = `
<div>
  <div
    class="container"
    data-testid="gallery-item-1"
  >
    <div
      class=""
    >
      <img
        alt="beautiful sunset"
        class="image medium"
        data-testid="galleryItemImage"
        loading="lazy"
        src="https://example.com/sunset.jpg"
      />
    </div>
    <div
      class="SkeletonItem medium"
      data-testid="skeleton"
    />
  </div>
</div>
`;

exports[`GalleryItem should match snapshot for all variants 3`] = `
<div>
  <div
    class="container"
    data-testid="gallery-item-1"
  >
    <div
      class=""
    >
      <img
        alt="beautiful sunset"
        class="image large"
        data-testid="galleryItemImage"
        loading="lazy"
        src="https://example.com/sunset.jpg"
      />
    </div>
    <div
      class="SkeletonItem large"
      data-testid="skeleton"
    />
  </div>
</div>
`;

exports[`GalleryItem should render the default component 1`] = `
<div>
  <div
    class="container"
    data-testid="gallery-item-1"
  >
    <div
      class=""
    >
      <img
        alt="beautiful sunset"
        class="image"
        data-testid="galleryItemImage"
        loading="lazy"
        src="https://example.com/sunset.jpg"
      />
    </div>
    <div
      class="SkeletonItem"
      data-testid="skeleton"
    />
  </div>
</div>
`;
